fix margin on mobile

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -80,4 +80,8 @@
   .navbar-container {
     flex-direction: column;
   }
+
+  .input-container {
+    margin-left: 0;
+  }
 }
